Added optional request body to complete endpoint, fix logic when completing task as task must be assigned before completions, added launch darkly and feature flag, added privileged clients list, updated functional test updated unit tests updated pact tests